CAUSEWAY-2297: internal _MemoryUsage supporting heap size measurement